<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:id="@+id/OppStatusHeader"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textSize="15sp"
            android:textAlignment="gravity"
            android:text="@string/OppoStatusHeader"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/OppStatus"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/OppStatusHeader">

        <TextView
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/WhiteLeft"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:id="@+id/WhiteLeft"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:background="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/BlackLeft"
            android:textColor="#ffffff"
            android:gravity="center"
            android:id="@+id/BlackLeft"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/Board"
        android:orientation="horizontal"
        android:layout_below="@+id/OppStatus"
        android:layout_above="@+id/Submit"
        android:baselineAligned="false">
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="15sp"
                android:textAlignment="gravity"
                android:gravity="center"
                android:text="@string/OppScore"
                android:id="@+id/OppScore"/>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/OppScore"
                android:layout_above="@+id/placeHolderA"
                android:textSize="100sp"
                android:textAlignment="gravity"
                android:gravity="center"
                android:id="@+id/OppCard" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:id="@+id/placeHolderA"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:id="@+id/placeHolderB"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/placeHolderB"
                android:layout_above="@+id/MyScore"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="100sp"
                android:id="@+id/MyCard" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:textSize="15sp"
                android:gravity="center"
                android:textAlignment="gravity"
                android:text="@string/MyScore"
                android:id="@+id/MyScore"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/Submit"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_above="@+id/Cards"
        android:text="@string/Submit">
    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/Cards"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center">

        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_0"
            android:text="0"
            android:background="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_margin="2dp"/>

        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_1"
            android:text="1"
            android:background="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_2"
            android:text="2"
            android:background="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_3"
            android:text="3"
            android:background="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_4"
            android:text="4"
            android:background="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_5"
            android:text="5"
            android:background="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_6"
            android:text="6"
            android:background="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_7"
            android:text="7"
            android:background="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_margin="2dp"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:id="@+id/Card_8"
            android:text="8"
            android:background="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_margin="2dp"
            />



    </LinearLayout>
</RelativeLayout>